<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="number_of_people">Number of People</string>

    <string name="no_round" translatable="false">0</string>
    <string name="round_total" translatable="false">1</string>
    <string name="round_tip" translatable="false">2</string>

    <string-array name="rounding_values">
        <item>@string/no_round</item>
        <item>@string/round_total</item>
        <item>@string/round_tip</item>
    </string-array>

    <string-array name="rounding_keys">
        <item>No Rounding</item>
        <item>Round Total</item>
        <item>Round Tip</item>
    </string-array>
</resources>