<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:onClick="easterEgg"
                android:text="@string/bill_amount"
                android:labelFor="@id/billAmountEditText"
                style="@style/DavidsWordThingStyle"/>-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_span="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Bill Amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/billAmountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:focusable="true"
                    android:selectAllOnFocus="true"
                    android:ems="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--<EditText
                android:id="@+id/billAmountEditText"
                android:layout_span="3"
                android:ems="10"
                android:hint="Enter your bill here"
                android:inputType="numberDecimal"
                android:focusable="true"
                android:selectAllOnFocus="true"/>-->
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/tip_percent"
                style="@style/DavidsWordThingStyle"/>
            <Button
                android:id="@+id/decreaseButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/minus_sign"
                style="@style/NewButtonStyle"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tipPercentTextView"/>
            <Button
                android:id="@+id/increaseButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/plus_sign" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:id="@+id/tipPercentSeekBar"
                android:layout_span="4"
                android:max="100"
                android:progress="20" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/tip_amount"
                style="@style/DavidsWordThingStyle"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tipAmountTextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Total Amount"
                style="@style/DavidsWordThingStyle"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/totalAmountTextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_people"
                style="@style/DavidsWordThingStyle"/>

            <RadioGroup
                android:id="@+id/numPeopleRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3">

                <RadioButton
                    android:id="@+id/onePersonRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1 Person" />

                <RadioButton
                    android:id="@+id/twoPeopleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2 People" />

                <RadioButton
                    android:id="@+id/threePeopleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3 People" />

                <RadioButton
                    android:id="@+id/fourPeopleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="4 People" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:id="@+id/individualTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Individual Amount"
                style="@style/DavidsWordThingStyle"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/individualAmountTextView"/>
        </TableRow>
    </TableLayout>

</ScrollView>